# UpperCase

./: BuildAndRun.sh  CMakeLists.txt  DockerFile  Dockerfile  README.md  UpperCase  main.cpp  test
oldFiles/: old Dockerfile
